--- a/Liarodon/Timeline/Timeline.storyboard
+++ b/Liarodon/Timeline/Timeline.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0ir-iA-oE8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0ir-iA-oE8">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,16 +14,16 @@
         <scene sceneID="QWi-bO-s8C">
             <objects>
                 <tableViewController id="R3Z-uQ-WeX" customClass="TimelineTableViewController" customModule="Liarodon" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="265" sectionHeaderHeight="28" sectionFooterHeight="28" id="vax-5H-8qa">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="281" sectionHeaderHeight="28" sectionFooterHeight="28" id="vax-5H-8qa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Toot" rowHeight="265" id="cHh-EG-Sy4" customClass="TootTableViewCell" customModule="Liarodon" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="320" height="265"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Toot" rowHeight="281" id="cHh-EG-Sy4" customClass="TootTableViewCell" customModule="Liarodon" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="281"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cHh-EG-Sy4" id="F9x-BH-XYg">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="264.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="280.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="kom-Ot-Ng1">
@@ -51,61 +52,84 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Replying to @131e55" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PS7-in-IDP">
-                                            <rect key="frame" x="76" y="28" width="127" height="16"/>
+                                            <rect key="frame" x="76" y="26" width="127" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jek-tu-mNf">
-                                            <rect key="frame" x="76" y="202" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated"/>
+                                            <rect key="frame" x="76" y="243" width="24" height="22"/>
+                                            <state key="normal" title="1" image="tab-federated">
+                                                <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-6f-WBV">
-                                            <rect key="frame" x="120" y="202" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated"/>
+                                            <rect key="frame" x="130" y="243" width="24" height="22"/>
+                                            <state key="normal" title="1" image="tab-federated">
+                                                <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihX-K8-OTz">
-                                            <rect key="frame" x="164" y="202" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated"/>
+                                            <rect key="frame" x="184" y="243" width="24" height="22"/>
+                                            <state key="normal" title="1" image="tab-federated">
+                                                <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
                                         </button>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAt-Ca-Wmo">
-                                            <rect key="frame" x="76" y="44" width="236" height="150"/>
+                                            <rect key="frame" x="76" y="44" width="236" height="177.5"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpE-y5-rQx">
-                                            <rect key="frame" x="208" y="202" width="16" height="22"/>
-                                            <state key="normal" image="tab-federated"/>
+                                            <rect key="frame" x="238" y="243" width="16" height="22"/>
+                                            <state key="normal" image="tab-federated">
+                                                <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
                                         </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aNZ-E5-FIN" userLabel="AttachmentView" customClass="AttachmentView" customModule="Liarodon" customModuleProvider="target">
+                                            <rect key="frame" x="76" y="228" width="236" height="0.0"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" id="r5f-L7-MS6"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="aNZ-E5-FIN" firstAttribute="leading" secondItem="aAt-Ca-Wmo" secondAttribute="leading" id="32C-1v-3e8"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="Xnl-ZK-QpF" secondAttribute="trailing" id="4z5-c6-szZ"/>
                                         <constraint firstItem="gpE-y5-rQx" firstAttribute="top" secondItem="ihX-K8-OTz" secondAttribute="top" id="5N3-6T-bK4"/>
                                         <constraint firstItem="kom-Ot-Ng1" firstAttribute="leading" secondItem="F9x-BH-XYg" secondAttribute="leadingMargin" id="80C-a0-XLa"/>
-                                        <constraint firstItem="PS7-in-IDP" firstAttribute="top" secondItem="89r-Uw-8c6" secondAttribute="bottom" constant="2" id="9S7-TG-aCy"/>
-                                        <constraint firstItem="aAt-Ca-Wmo" firstAttribute="top" secondItem="PS7-in-IDP" secondAttribute="bottom" id="C1g-lA-mhP"/>
-                                        <constraint firstItem="ihX-K8-OTz" firstAttribute="leading" secondItem="Bad-6f-WBV" secondAttribute="trailing" constant="20" id="F74-3A-sA8"/>
+                                        <constraint firstItem="PS7-in-IDP" firstAttribute="top" secondItem="89r-Uw-8c6" secondAttribute="bottom" id="9S7-TG-aCy"/>
+                                        <constraint firstItem="aAt-Ca-Wmo" firstAttribute="top" secondItem="PS7-in-IDP" secondAttribute="bottom" constant="2" id="C1g-lA-mhP"/>
+                                        <constraint firstItem="ihX-K8-OTz" firstAttribute="leading" secondItem="Bad-6f-WBV" secondAttribute="trailing" constant="30" id="F74-3A-sA8"/>
                                         <constraint firstItem="Jek-tu-mNf" firstAttribute="leading" secondItem="aAt-Ca-Wmo" secondAttribute="leading" id="FDm-4r-GJZ"/>
                                         <constraint firstItem="Bad-6f-WBV" firstAttribute="top" secondItem="Jek-tu-mNf" secondAttribute="top" id="GFi-l1-PJM"/>
                                         <constraint firstItem="Xnl-ZK-QpF" firstAttribute="bottom" secondItem="89r-Uw-8c6" secondAttribute="bottom" id="Ns1-s6-UEI"/>
-                                        <constraint firstItem="Jek-tu-mNf" firstAttribute="top" secondItem="aAt-Ca-Wmo" secondAttribute="bottom" constant="7.5" id="RyJ-k3-QBe"/>
-                                        <constraint firstItem="gpE-y5-rQx" firstAttribute="leading" secondItem="ihX-K8-OTz" secondAttribute="trailing" constant="20" id="SOx-uL-v1K"/>
+                                        <constraint firstItem="gpE-y5-rQx" firstAttribute="leading" secondItem="ihX-K8-OTz" secondAttribute="trailing" constant="30" id="SOx-uL-v1K"/>
                                         <constraint firstItem="89r-Uw-8c6" firstAttribute="bottom" secondItem="5mf-9y-1jz" secondAttribute="bottom" id="ScW-aT-l00"/>
                                         <constraint firstItem="aAt-Ca-Wmo" firstAttribute="leading" secondItem="PS7-in-IDP" secondAttribute="leading" id="Vxe-c5-T2h"/>
+                                        <constraint firstItem="Jek-tu-mNf" firstAttribute="top" secondItem="aNZ-E5-FIN" secondAttribute="bottom" constant="15" id="bWD-fl-P79"/>
                                         <constraint firstItem="5mf-9y-1jz" firstAttribute="top" secondItem="F9x-BH-XYg" secondAttribute="topMargin" id="ekQ-KP-tMm"/>
                                         <constraint firstItem="PS7-in-IDP" firstAttribute="leading" secondItem="5mf-9y-1jz" secondAttribute="leading" id="hpd-Yi-f9a"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="aAt-Ca-Wmo" secondAttribute="trailing" id="kbI-JX-Pwh"/>
+                                        <constraint firstItem="aNZ-E5-FIN" firstAttribute="top" secondItem="aAt-Ca-Wmo" secondAttribute="bottom" constant="6.5" id="mZI-PT-hgj"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Jek-tu-mNf" secondAttribute="bottom" constant="7.5" id="nfn-Kl-fjg"/>
                                         <constraint firstItem="kom-Ot-Ng1" firstAttribute="top" secondItem="F9x-BH-XYg" secondAttribute="topMargin" id="rHa-tG-0Mu"/>
                                         <constraint firstItem="ihX-K8-OTz" firstAttribute="top" secondItem="Bad-6f-WBV" secondAttribute="top" id="rex-OL-toR"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="aNZ-E5-FIN" secondAttribute="trailing" id="soI-im-xGx"/>
                                         <constraint firstItem="5mf-9y-1jz" firstAttribute="leading" secondItem="kom-Ot-Ng1" secondAttribute="trailing" constant="8" id="tTD-6h-jCL"/>
-                                        <constraint firstItem="Bad-6f-WBV" firstAttribute="leading" secondItem="Jek-tu-mNf" secondAttribute="trailing" constant="20" id="vd5-IN-qik"/>
+                                        <constraint firstItem="Bad-6f-WBV" firstAttribute="leading" secondItem="Jek-tu-mNf" secondAttribute="trailing" constant="30" id="vd5-IN-qik"/>
                                         <constraint firstItem="89r-Uw-8c6" firstAttribute="leading" secondItem="5mf-9y-1jz" secondAttribute="trailing" constant="6" id="ztp-Fr-Fvd"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="contentTextView" destination="aAt-Ca-Wmo" id="86X-lT-L0D"/>
+                                    <outlet property="attachmentHeightConstraint" destination="r5f-L7-MS6" id="33a-Mo-AEd"/>
+                                    <outlet property="attachmentView" destination="aNZ-E5-FIN" id="iOt-54-e49"/>
+                                    <outlet property="contentTextView" destination="aAt-Ca-Wmo" id="uEr-2I-xE1"/>
+                                    <outlet property="replyingLabel" destination="PS7-in-IDP" id="E6H-To-M85"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -119,7 +143,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RjH-og-a0w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="937.5" y="-1.056338028169014"/>
+            <point key="canvasLocation" x="937.5" y="-2.112676056338028"/>
         </scene>
         <!--Timeline-->
         <scene sceneID="Am9-I9-kVx">
