--- a/Liarodon/Main/Main.storyboard
+++ b/Liarodon/Main/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,11 +23,20 @@
                         <segue destination="EeK-H4-i7k" kind="relationship" relationship="viewControllers" id="NtT-nM-BoU"/>
                         <segue destination="xUl-60-ZZL" kind="relationship" relationship="viewControllers" id="8TD-GF-OAF"/>
                         <segue destination="XMU-BC-G58" kind="relationship" relationship="viewControllers" id="NO3-he-kdM"/>
+                        <segue destination="EmQ-mr-qE2" kind="presentation" identifier="Login" animates="NO" id="zHK-um-KYb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gzw-GM-NU5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
+        </scene>
+        <!--Login-->
+        <scene sceneID="IpZ-sG-vDc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" id="EmQ-mr-qE2" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hZC-Pc-fag" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1" y="427"/>
         </scene>
         <!--Timeline-->
         <scene sceneID="dNf-ku-GDG">
